<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- days toolbar -->
    <RelativeLayout
        android:id="@+id/layout_calendar_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/image_calendar_prev"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="40dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow_left"/>

        <LinearLayout
            android:id="@+id/layout_date_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_toEndOf="@id/image_calendar_prev">

            <TextView
                android:id="@+id/text_date_display_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="normal"
                android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                android:textColor="#222222"
                android:hint="@string/calendar_year"/>

            <TextView
                android:id="@+id/text_date_display_date"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:gravity="center"
                android:textSize="55sp"
                android:textStyle="bold"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="#222222"
                android:hint="@string/calendar_date"/>

            <TextView
                android:id="@+id/text_date_display_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="#222222"
                android:hint="@string/calendar_day"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/image_calendar_next"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:layout_toEndOf="@id/layout_date_info"
            android:src="@drawable/ic_arrow_right"/>
    </RelativeLayout>

    <Button
        android:id="@+id/button_today"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:textSize="11sp"
        app:layout_constraintTop_toBottomOf="@+id/layout_calendar_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/calendar_button_today"
        android:textColor="@android:color/white"
        android:background="@drawable/round_button"/>

    <LinearLayout
        android:id="@+id/layout_calendar_header"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_today">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#222222"
            android:text="@string/calendar_sunday"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#222222"
            android:text="@string/calendar_monday"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#222222"
            android:text="@string/calendar_tuesday"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#222222"
            android:text="@string/calendar_wednesday"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#222222"
            android:text="@string/calendar_thursday"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#222222"
            android:text="@string/calendar_friday"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#222222"
            android:text="@string/calendar_saturday"/>

    </LinearLayout>

    <GridView
        android:id="@+id/grid_calendar"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:numColumns="7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_calendar_header"/>

</androidx.constraintlayout.widget.ConstraintLayout>